# restream

./: .gitignore  AGENTS.md  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: claude.yml  dart-publish.yml  dart-test.yml  python-cli-test.yml  python-client-test.yml  python-publish.yml
cli/python/: pyproject.toml
cli/python/src/restream_io/: _schemas.py  cli.py
cli/python/src/restream_io_cli/: __init__.py  cli.py
cli/python/tests/: test_cli_channel.py  test_cli_event.py  test_cli_event_get.py  test_cli_profile.py  test_cli_stream_key.py
dart/: CHANGELOG.md  README.md  pubspec.yaml
dart/example/: restream_dart_example.dart  restream_example.dart
dart/example/flutter_example/android/: local.properties
dart/example/flutter_example/lib/: main.dart
dart/example/flutter_example/test/: widget_test.dart
dart/examples/flutter_example/: README.md  pubspec.yaml
dart/examples/flutter_example/android/: local.properties
dart/examples/flutter_example/lib/: main.dart
dart/examples/flutter_example/web/: index.html
dart/lib/: restream.dart  restream_dart.dart
dart/lib/src/api/: restream_client.dart
dart/test/: restream_dart_test.dart  restream_test.dart
flutter_example/: pubspec.yaml
flutter_example/lib/: main.dart
python/: README.md  pyproject.toml
python/src/pyrestream/: __init__.py
python/tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_schemas.py  test_schemas_integration.py  test_utils.py  test_websocket.py
restream_dart/: README.md  pubspec.yaml
restream_dart/lib/: restream_dart.dart
(+43 files in other folders)
