[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
  "setuptools_scm[toml]>=7.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyrestream"
dynamic = ["version"]
description = "Python client library for the Restream.io REST API and WebSocket APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "attrs>=25.3.0",
  "requests>=2.32.4",
  "websockets>=14.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
root = ".."
version_scheme = "release-branch-semver"
local_scheme = "dirty-tag"
fallback_version = "0.0.0+unknown"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pymarkdownlnt>=0.9.31",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "responses>=0.25.7",
    "ruff>=0.12.10",
]
